# perscrutar

./: .editorconfig  Cargo.toml
perscrutar-cmd/: Cargo.toml
perscrutar-lib/: Cargo.toml
perscrutar-lib/src/: lib.rs
perscrutar-lib/src/bibtex/: data.rs  mod.rs  parser.rs
